--- a/schauplaetze.tex
+++ b/schauplaetze.tex
@@ -1,2 +1,10 @@
 \paragraph{Das Moorsche Schloss}
+Saal, Amaliens Zimmer, Moors Zimmer, Schlossgarten, Galerie, Anderes Zimmer
+\paragraph{Schenke an den Grenzen von Sachsen}
 Lauter Tolle Sachen
+\paragraph{Die b"omischen W"alder}
+Lauter Tolle Sachen
+\paragraph{Gegend an der Donau}
+R"auber auf einem von Bäumen geschützen H"ugel, die Pferde unten am Weiden.
+\paragraph{Um das Schloss}
+L"andlieche Gegend in der Umgebung, Schloss im Wald
