--- a/dieRäuber.tex
+++ b/dieRäuber.tex
@@ -19,8 +19,8 @@
 \part{Personenregister}
 	\input{register}
 \part{Karl von Moor}
-	\section{Charakteristik}
-		\input{charakteristik}
+	\section{Charakterisierung}
+		\input{charakterisierung}
 	\section{Steckbrief}
 		\input{steckbrief}
 \part{Textarbeit}
