--- a/neuformulierung.tex
+++ b/neuformulierung.tex
@@ -1,5 +1,31 @@
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In adipiscing pellentesque volutpat. Aenean mattis neque ac ante dignissim interdum. Nunc nec hendrerit nisl. Fusce semper suscipit est sit amet feugiat. Nunc bibendum erat vitae sem faucibus sagittis. Duis id ligula ac mauris sagittis mattis. Vivamus ultrices condimentum tortor eget consequat. Donec nec velit eros. Maecenas sodales risus a massa cursus malesuada. Quisque ornare dolor eget odio scelerisque laoreet. Cras pellentesque adipiscing pulvinar. Etiam varius neque sit amet tellus posuere non sodales neque gravida. Aliquam sit amet felis libero, sit amet aliquet tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In elit leo, consectetur condimentum tincidunt sed, varius vel arcu.
+\Character[MAXIMILIAN, regiereder Graf von Moor]{Der alte Moor}{moor}
+\Character[FRANZ, sein Sohn.]{Franz}{fran}
 
-Aliquam dictum mi sed quam tristique mollis. Cras vitae magna augue. Nullam facilisis odio sit amet eros lobortis eu ultricies sem gravida. Duis a risus odio. Quisque in risus nisl, id fringilla mauris. Ut nisl ipsum, malesuada nec interdum eu, cursus ac nibh. Proin justo mi, sodales id tincidunt eget, dictum id nisl. Quisque venenatis nisl vel ipsum ullamcorper suscipit. Curabitur suscipit lacinia lectus sed feugiat. Nam et leo ut dui bibendum viverra.
+\begin{center}
 
-Phasellus dapibus, arcu ut facilisis fermentum, neque nisi ornare orci, sit amet vestibulum justo est id orci. Quisque luctus cursus enim sed imperdiet. In a velit eu ligula tristique eleifend eu quis magna. Ut id mauris vitae libero feugiat porttitor. Donec consequat nibh in neque placerat ultricies. Pellentesque blandit magna eget quam volutpat a volutpat neque congue. Nulla porttitor volutpat mi sit amet bibendum. Sed congue mollis imperdiet. Suspendisse tincidunt hendrerit placerat. In ut leo quam, ut vehicula purus.
+\Large{Erster Akt}
+
+\large{Erste Szene}
+
+\end{center}
+
+\StageDir{Franken. Saal im Schloss des alten Moors.\\\fran, \moor}
+
+[...]
+
+%mir ist’s als sa ̈h ich dich schon um den Nichtswu ̈rdigen, den Abscheulichen in tausend Thra ̈nen ergossen mir ists, als sa ̈h ich schon dei- nen alten, frommen Vater Todtenbleich
+
+%Dich male ich mir schon aus, wie du um diesen Unw"urdigen, den Taugenichts weinst und deinen Vater dem Tode nahe
+
+\begin{drama}
+
+\franspeaks \direct{nimmt den Brief aus der Tasche.} Dir ist unser Korrespandent bekannt! Schau! Alles w"urde ich geben, k"o"nnte ich dir sagen, dass er ein L"ugner, ein dreckiger L"ugner, ist --- Beruhige dich! Du wirst mir nachsehen, dass ich dich den Brief nicht selbst lesen lasse -- Noch darfst du nicht alles h"oren.
+\moorspeaks Alles, alles -- mein Sohn, du bist mir eine Hilfe.
+\franspeaks \direct{liest.} \frqq Leipzig, vom 1. Mai. -- H"atte ich dir nicht versprochen dir nichts, das Schicksal deines Bruders betrefflich, zu verschweigen, mein Freund, w"are ich der "Ubersendung des Folgenden aus dem Weg gegangen. Aus unseren vorhergegangenen Korrespondenzen schlie"se ich wie sehr dich diese Nachricht quälen muss. Dich male ich mir schon aus, wie du um diesen Unw"urdigen, den Taugenichts\flqq \ --- \direct{Der alte Moor verbirgt sein Gesicht.} Schau, Vater! ich lese dir nur das schonendste vor -- \frqq den Taugenichts weinst\flqq , ja, sie haben mich ergriffen -- haben mich eingenommen -- \frqq und deinen Vater dem Tode nahe\flqq \ -- Oh Gott! Ich sehe dich diesem Zustand schon so nahe, doch hast du noch nichts erfahren.
+\moorspeaks Weiter! Weiter!
+
+\end{drama}
+
+[...]
+
+\endinput
