--- a/regiebuch.tex
+++ b/regiebuch.tex
@@ -17,7 +17,7 @@
 
 \franspeaks \direct{nimmt den Brief aus der Tasche.} Ihr kennt unsern Korrespondenten! Seht! Den Finger meiner rechten Hand wollt' ich drum geben, d"urft ich sagen, er ist ein L"ugner, ein schwarzer giftiger L"ugner --- Fasst Euch! Ihr vergebt mir, wenn ich Euch den Brief nicht selbst lesen lasse -- Noch d"orft Ihr nicht alles h"oren.
 \moorspeaks Alles, alles -- mein Sohn, du ersparst mir die Kr"ucke.
-\franspeaks \direct{liest.} \frqq Leipzig, vom 1. May. -- Verb"ande mich nicht eine unverbr"uchliche Zusage dir auch nicht das geringste zu verhelen, was ich von den Schicksalen deines Bruders auffangen kann, liebster Freund, nimmermehr w"urde meine unschuldige Feder an dir zur Tyranninn geworden seyn. Ich kann es aus hundert Briefen von dir abnehmen, wie Nachrichten dieser Art dein br"uderliches Herz durchbohren m"u"sen, mir ist's als s"ah ich dich schon um den Nichtsw"urdigen, den Abscheulichen\flqq \ --- \direct{Der alte Moor verbirgt sein Gesicht.} Seht, Vater! ich lese Euch nur das glimpflichste -- \frqq den Abscheulichen in tausend Thr"anen ergossen\flqq , ach, sie flossen -- st"urzten stromweis von dieser mitleidigen Wange -- \frqq mir ists, als s"ah ich schon deinen alten, frommen Vater Todtenbleich\flqq \ -- Jesus Maria! Ihr seyds, eh Ihr noch das Mindeste wisset?
+\franspeaks \direct{liest.} \frqq Leipzig, vom 1. May. -- Verb"ande mich nicht eine unverbr"uchliche Zusage, dir auch nicht das geringste zu verhelen, was ich von den Schicksalen deines Bruders auffangen kann, liebster Freund, nimmermehr w"urde meine unschuldige Feder an dir zur Tyranninn geworden seyn. Ich kann es aus hundert Briefen von dir abnehmen, wie Nachrichten dieser Art dein br"uderliches Herz durchbohren m"u"sen, mir ist's als s"ah ich dich schon um den Nichtsw"urdigen, den Abscheulichen\flqq \ --- \direct{Der alte Moor verbirgt sein Gesicht.} Seht, Vater! ich lese Euch nur das glimpflichste -- \frqq den Abscheulichen in tausend Thr"anen ergossen\flqq , ach, sie flossen -- st"urzten stromweis von dieser mitleidigen Wange -- \frqq mir ist's, als s"ah ich schon deinen alten, frommen Vater Todtenbleich\flqq \ -- Jesus Maria! Ihr seyds, eh Ihr noch das Mindeste wisset?
 \moorspeaks Weiter! Weiter!
 \franspeaks \frqq Todtenbleich in seinen Stuhl zur"ucktaumeln und dem Tage fluchen an dem ihm zum erstenmal Vater entgegengestammelt ward. Man hat mir nicht alles entdecken m"ogen, und von dem wenigen das ich weis erf"ahrst du nur weniges. Dein Bruder scheint nun das Ma"s seiner Schande gef"ullt zu haben; ich wenigstens kenne nichts "uber dem was er wirklich erreicht hat, wenn nicht sein Genie das meinige hierinn "ubersteigt. Gestern um Mitternacht hatte er den gro"sen Entschlu"s, nach vierzig tausend Dukaten Schulden\flqq \ -- ein h"ubsches Taschengeld Vater -- \frqq nachdem er zuvor die Tochter eines reichen Banquiers allhier entjungfert, und ihren Galan einen braven Jungen von Stand im Duell auf den Tod verwundet mit sieben andern, die er mit in sein Luderleben gezogen dem Arm der Justiz zu entlauffen\flqq \ -- Vater! Um Gotteswillen Vater! wie wird Euch?
 \moorspeaks Es ist genug. -- La"s ab mein Sohn!
