--- a/register.tex
+++ b/register.tex
@@ -1,1 +1,9 @@
-Halo
+\paragraph{Maximilian}
+\paragraph{Karl}
+\paragraph{Franz}
+\paragraph{Amalia von Edelreich}
+\paragraph{Libertiner}
+\subparagraph{Spiegelberg}
+\paragraph{Daniel}
+\paragraph{Hermann}
+\paragraph{Pastor Moser}
