Typos and necessary adjustments

--- a/dieRäuber.tex
+++ b/dieRäuber.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper, titlepage, draft]{article}
-\usepackage{ngerman, dramatist}
+\usepackage{ngerman, dramatist, adjmulticol, lipsum, type1cm, lettrine}
 \usepackage[pdftex,bookmarks=true]{hyperref}
 \author{Fabio Madge-Pimentel\\
 	Josef-Hofmiller Gymnasium Freising, 10b\\
@@ -31,11 +31,11 @@
 	\section{Neuformulierung}
 		\input{neuformulierung}
 \part{Freiarbeit}
-	\section{Zeitungsbericht "uber die R"auber}
-		\input{zeitung}
 	\section{Beurteilung}
 		\input{beurteilung}
 	\section{Alternatives Ende}
 		\input{ende}
+	\section{Zeitungsbericht "uber die R"auber}
+		\input{zeitung}		
 
 \end{document}
