First Steckbrief; Minors

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 LaTeX Projekt mit allen Dateien zu einem Lesetagebuch zu Fridrich Schillers "Die Räuber".
 
 texi2pdf dieRäuber.tex
+
+karl.jpeg: Cut out of 'http://commons.wikimedia.org/wiki/File:Friedrich_Pecht_gez,_Schiller-Galerie,_Friedrich_von_Schiller,_Sammelbild,_Stahlstich_um_1859,_Karl_Moor_aus_Die_Räuber,_Lazarus_Gottlieb_Sichling.jpg' [Author: Friedrich Pecht; Lazarus Gottlieb Sichling]
