--- a/dieRäuber.tex
+++ b/dieRäuber.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper, titlepage, draft]{article}
-\usepackage{ngerman, dramatist, adjmulticol, lipsum, type1cm, lettrine}
+\usepackage{ngerman, dramatist, adjmulticol, lipsum, type1cm, lettrine, graphicx}
 \usepackage[pdftex,bookmarks=true]{hyperref}
 \author{Fabio Madge-Pimentel\\
 	Josef-Hofmiller Gymnasium Freising, 10b\\
