--- a/steckbrief.tex
+++ b/steckbrief.tex
@@ -1,7 +1,11 @@
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In adipiscing pellentesque volutpat. Aenean mattis neque ac ante dignissim interdum. Nunc nec hendrerit nisl. Fusce semper suscipit est sit amet feugiat. Nunc bibendum erat vitae sem faucibus sagittis. Duis id ligula ac mauris sagittis mattis. Vivamus ultrices condimentum tortor eget consequat. Donec nec velit eros. Maecenas sodales risus a massa cursus malesuada. Quisque ornare dolor eget odio scelerisque laoreet. Cras pellentesque adipiscing pulvinar. Etiam varius neque sit amet tellus posuere non sodales neque gravida. Aliquam sit amet felis libero, sit amet aliquet tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In elit leo, consectetur condimentum tincidunt sed, varius vel arcu.
+\begin{center}
+\begin{huge}
+\textbf{\uppercase{Steckbrief}}
+\end{huge}
+\end{center}
 
-Aliquam dictum mi sed quam tristique mollis. Cras vitae magna augue. Nullam facilisis odio sit amet eros lobortis eu ultricies sem gravida. Duis a risus odio. Quisque in risus nisl, id fringilla mauris. Ut nisl ipsum, malesuada nec interdum eu, cursus ac nibh. Proin justo mi, sodales id tincidunt eget, dictum id nisl. Quisque venenatis nisl vel ipsum ullamcorper suscipit. Curabitur suscipit lacinia lectus sed feugiat. Nam et leo ut dui bibendum viverra.
+\begin{center}
+\includegraphics[scale=2.5]{karl}
+\end{center}
 
-Phasellus dapibus, arcu ut facilisis fermentum, neque nisi ornare orci, sit amet vestibulum justo est id orci. Quisque luctus cursus enim sed imperdiet. In a velit eu ligula tristique eleifend eu quis magna. Ut id mauris vitae libero feugiat porttitor. Donec consequat nibh in neque placerat ultricies. Pellentesque blandit magna eget quam volutpat a volutpat neque congue. Nulla porttitor volutpat mi sit amet bibendum. Sed congue mollis imperdiet. Suspendisse tincidunt hendrerit placerat. In ut leo quam, ut vehicula purus.
-
-Sed imperdiet libero vel nunc placerat vel varius massa rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed augue turpis, consectetur id vestibulum id, dignissim sed neque. Quisque scelerisque iaculis felis, in condimentum nisl bibendum non. Maecenas velit mi, molestie sit amet ultrices sit amet, lobortis a leo. Nulla facilisi. Nunc fringilla sollicitudin faucibus. Vivamus a nibh mi. Nulla gravida dolor sapien, eu tincidunt nunc. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc odio nisl, vestibulum non fringilla ut, tempor eu nunc. Mauris porta, enim at hendrerit cursus, neque quam rutrum sapien, vel pellentesque mauris ligula eget nisl. Curabitur cursus, leo in gravida porttitor, libero eros auctor justo, tristique pretium magna augue eu metus.
+Wer kannt diesen Mann?
