--- a/zeitung.tex
+++ b/zeitung.tex
@@ -3,5 +3,5 @@
 \textit{\Large Die unerwarteten Wahrheiten}
 \normalsize
 \begin{adjmulticols*}{3}{0pt}{0in}
-  \lettrine{W}{enn} ich dieses erblicke. \lipsum 
+  \lettrine{W}{enn} ich dieses erblicke. \lipsum[1-2]
 \end{adjmulticols*}
