--- a/README
+++ b/README
@@ -2,4 +2,15 @@ LaTeX Projekt mit allen Dateien zu einem Lesetagebuch zu Friedrich Schillers "Di
 
 texi2pdf dieRäuber.tex
 
-karl.jpeg: Cut out of 'http://commons.wikimedia.org/wiki/File:Friedrich_Pecht_gez,_Schiller-Galerie,_Friedrich_von_Schiller,_Sammelbild,_Stahlstich_um_1859,_Karl_Moor_aus_Die_Räuber,_Lazarus_Gottlieb_Sichling.jpg' [Author: Friedrich Pecht; Lazarus Gottlieb Sichling]
+karl.jpeg: Cut out of 'http://commons.wikimedia.org/wiki/File:Friedrich_Pecht_gez,_Schiller-Galerie,_Friedrich_von_Schiller,_Sammelbild,_Stahlstich_um_1861,_Karl_Moor_aus_Die_Räuber,_Lazarus_Gottlieb_Sichling.jpg' [Author: Friedrich Pecht; Lazarus Gottlieb Sichling]
+
+ToDo:
+Register          0.2
+Charakterisierung 0.1
+Steckbrief        0.2
+Schauplätze       0.2
+Regiebuch         1.0
+Neuformulierung   1.0
+Beurteilung       0.1
+Ende              0.1
+Zeitung           0.2
