--- a/charakterisierung.tex
+++ b/charakterisierung.tex
@@ -1,5 +1,2 @@
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet lorem ut ante mattis posuere sit amet non enim. Curabitur dui nulla, condimentum vel tristique id, laoreet id est. Sed et erat ut odio bibendum scelerisque. Integer dapibus quam at dui aliquam id ultricies leo rhoncus. Pellentesque hendrerit leo sit amet magna blandit vitae euismod dolor convallis. Quisque non risus augue. Duis quam tellus, congue et accumsan at, fringilla eget metus. Suspendisse mollis venenatis orci quis dignissim.
-
-Vestibulum malesuada pulvinar neque vitae blandit. Cras nunc elit, vulputate a consequat non, porttitor sit amet ligula. Sed lacus ante, convallis vitae iaculis eu, facilisis sit amet purus. Aliquam erat volutpat. Quisque adipiscing luctus viverra. Etiam sollicitudin tortor vel lacus mollis quis ultricies lorem lobortis. Suspendisse non velit ac sem vulputate bibendum. Curabitur interdum ipsum vel leo feugiat sit amet posuere mi aliquam. Nulla adipiscing sapien at elit lobortis sit amet mattis diam pharetra. Nulla odio metus, iaculis vitae consectetur sit amet, ultricies ac ante.
-
-Nulla risus nulla, consectetur sit amet fermentum et, elementum vitae libero. Aenean varius felis id ipsum tempus luctus. Sed tincidunt placerat orci id euismod. Etiam rhoncus mi nec ante volutpat elementum. Donec vel quam in tortor laoreet porttitor. Aliquam elit tellus, ultrices ac tincidunt quis, laoreet ut odio. Ut mattis sodales turpis id consectetur. Integer felis nisl, sollicitudin et facilisis eget, convallis id orci. Donec eu vehicula nunc.
+Karl Moor ist der "alteste Sohn des alten Moor und steht seit seiner Kindheit mit seinem Bruder Franz in Rivalität um die Gunst dessen, wobei Karl generell im Vorteil lieg. Dies ist zum einen durch seinen guten "au"seren Qualitäten, aber auch seinen Intelekt bedingt.
+Zu Beginn des Dramas ist er als Student in Leipzig, bricht sein Studium jedoch, wegen der Entt"auschung "uber die Versto"sung des Vaters, zugunsten einer Karriere als R"auber ab. In dieser Profession bek"ampft er als Hauptmann einer R"aberbande die Ungerechtigkeiten im Staat, kann sich jedoch zu keinem Zeitpunkt von seiner Liebe Amalia l"osen.
