--- a/dieRäuber.tex
+++ b/dieRäuber.tex
@@ -22,6 +22,7 @@
 	\section{Charakterisierung}
 		\input{charakterisierung}
 	\section{Steckbrief}
+		\break
 		\input{steckbrief}
 \part{Textarbeit}
 	\section{Schaupl"atze}
