--- a/steckbrief.tex
+++ b/steckbrief.tex
@@ -8,4 +8,16 @@
 \includegraphics[scale=2.5]{karl}
 \end{center}
 
-Wer kannt diesen Mann?
+\begin{center}
+Der hier gezeigte  R"auberhauptmann \textbf{\uppercase{Karl von Moor}} wird aufgrund diverser vergehen gegen die Menschlichkeit gesucht. Dem Finder werden
+\end{center}
+
+\begin{center}
+\begin{huge}
+\textbf{1000} Louis d'or
+\end{huge}
+\end{center}
+
+\begin{center}
+geboten. Der Gesuchte ist etwa \textbf{29 Jahre} alt und etwa \textbf{6 Schuh} gro"s.
+\end{center}
