--- a/register.tex
+++ b/register.tex
@@ -1,9 +1,18 @@
 \paragraph{Maximilian}
+Altersm"uder, leichtgl"aubiger Mann, ohne gro"se Ambitionen
 \paragraph{Karl}
+Junger st"urmischer Mann, gutaussehend und intelligent
 \paragraph{Franz}
+K"uhler, schlecht aussehender Taktiker ohne Ideale
 \paragraph{Amalia von Edelreich}
+Treu Liebende, attraktive junge Frau
 \paragraph{Libertiner}
+Gruppe ergebender R"auber, deren Lebensmittelpunkt die Bande bildet
 \subparagraph{Spiegelberg}
+Gegenspieler Karls, der keinen Verbrechen f"urchtet
 \paragraph{Daniel}
+Alter, treuer Hausangestellter
 \paragraph{Hermann}
-\paragraph{Pastor Moser}	
+Leicht beeinflussbarer, aber im Herzen guter Mann
+\paragraph{Pastor Moser}
+"Uberlegter Kleriker
