--- a/schauplaetze.tex
+++ b/schauplaetze.tex
@@ -1,10 +1,25 @@
 \paragraph{Das Moorsche Schloss}
-Saal, Amaliens Zimmer, Moors Zimmer, Schlossgarten, Galerie, Anderes Zimmer
-\paragraph{Schenke an den Grenzen von Sachsen}
-Lauter Tolle Sachen
-\paragraph{Die b"omischen W"alder}
-Echt Tolle Sachen
-\paragraph{Gegend an der Donau}
-R"auber auf einem von B"aumen geschützen H"ugel, die Pferde unten am Weiden.
-\paragraph{Um das Schloss}
-L"andlieche Gegend in der Umgebung, Schloss im Wald
+	\subparagraph{Saal, \textit{1. Akt, 1. Szene}}
+		Ort der Briefverlesung
+	\subparagraph{Amaliens Zimmer, \textit{1. Akt, 3. Szene}}
+		Bedr"anung Amalias durch Franz
+	\subparagraph{Franzes Zimmer, \textit{2. Akt, 1. Szene}}
+		Zentrale Franzens Schaffen
+	\subparagraph{Moors Zimmer, \textit{2. Akt, 2. Szene}}
+		Ort an dem der alte vom Tod sienes Sohnes erf"ahrt
+	\subparagraph{Schlossgarten, \textit{3. Akt, 1. Szene}, \textit{4. Akt, 5. Szene}}
+		Weitere Bedr"angung Amalias und sp"ater unerkannte Begegnung mit Karl
+	\subparagraph{Galerie, \textit{4. Akt, 2. Szene}}
+		Enddeckung Karls
+	\subparagraph{Anderes Zimmer, \textit{4. Akt, 3. Szene}}
+		Offenbarung Karls gegenüber Daniel
+	\subparagraph{Umgebende Gegend, \textit{4. Akt, 1. Szene}}
+		Lager und R"uckzugsort der Ra"uber
+	\subparagraph{Nahe gelegener Wald. Mit Schloss, \textit{4. Akt, 5. Szene}, \textit{5. Akt, 2. Szene}}
+		Ort der Gefangenschaft des alten Moors
+\paragraph{Schenke an den Grenzen von Sachsen, \textit{1. Akt, 2. Szene}}
+Ort an dem Karl auf Spiegelberg trifft
+\paragraph{Die b"omischen W"alder, \textit{2. Akt, 3. Szene}}
+Lager und R"uckzugsort der Ra"uber
+\paragraph{Gegend an der Donau, \textit{3. Akt, 2. Szene}}
+Lager und R"uckzugsort der Ra"uber
