minor layout changes

--- a/dieRäuber.tex
+++ b/dieRäuber.tex
@@ -21,8 +21,8 @@
 \part{Karl von Moor}
 	\section{Charakterisierung}
 		\input{charakterisierung}
+	\newpage
 	\section{Steckbrief}
-		\break
 		\input{steckbrief}
 \part{Textarbeit}
 	\section{Schaupl"atze}
