--- a/ende.tex
+++ b/ende.tex
@@ -1,3 +1,2 @@
-Phasellus dapibus, arcu ut facilisis fermentum, neque nisi ornare orci, sit amet vestibulum justo est id orci. Quisque luctus cursus enim sed imperdiet. In a velit eu ligula tristique eleifend eu quis magna. Ut id mauris vitae libero feugiat porttitor. Donec consequat nibh in neque placerat ultricies. Pellentesque blandit magna eget quam volutpat a volutpat neque congue. Nulla porttitor volutpat mi sit amet bibendum. Sed congue mollis imperdiet. Suspendisse tincidunt hendrerit placerat. In ut leo quam, ut vehicula purus.
-
-Sed imperdiet libero vel nunc placerat vel varius massa rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed augue turpis, consectetur id vestibulum id, dignissim sed neque. Quisque scelerisque iaculis felis, in condimentum nisl bibendum non. Maecenas velit mi, molestie sit amet ultrices sit amet, lobortis a leo. Nulla facilisi. Nunc fringilla sollicitudin faucibus. Vivamus a nibh mi. Nulla gravida dolor sapien, eu tincidunt nunc. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc odio nisl, vestibulum non fringilla ut, tempor eu nunc. Mauris porta, enim at hendrerit cursus, neque quam rutrum sapien, vel pellentesque mauris ligula eget nisl. Curabitur cursus, leo in gravida porttitor, libero eros auctor justo, tristique pretium magna augue eu metus.
+Mein alternatives Ende setzt im \textit{5. Akt, 1. Szene} an, aber in diesem Szenario gelingt es Amalia nicht vom Schloss zu fliehen, sondern wird von einem Nachtw"achter aufgegriffen. Der Zorn "uber den Fluchtversuch ist das Z"unglein an der Waage f"ur Franz und er fasst den Entschluss zum Selbstmord. Jedoch m"ochte er Amalia nicht am Leben lassen und entscheidt sich daf"ur sie von eben erw"ahnten Nachtw"achter im Brunnen ert"anken zu lassen.
+Dadurch, dass Amalia niemals im Lager auftaucht, stirbt der alte Moor durch die and eines der R"auber. Die Geschehnisse lassen Karl letzendlich mit seiner Vergnagenheit abschlie"sen und er kann weiter als R"auber t"atig sein.
