--- a/dieRäuber.tex
+++ b/dieRäuber.tex
@@ -18,12 +18,14 @@
 
 \part{Personenregister}
 	\input{register}
+\newpage
 \part{Karl von Moor}
 	\section{Charakterisierung}
 		\input{charakterisierung}
-	\newpage
+%	\newpage
 	\section{Steckbrief}
 		\input{steckbrief}
+\newpage
 \part{Textarbeit}
 	\section{Schaupl"atze}
 		\input{schauplaetze}
@@ -31,6 +33,7 @@
 		\input{regiebuch}
 	\section{Neuformulierung}
 		\input{neuformulierung}
+\newpage
 \part{Freiarbeit}
 	\section{Beurteilung}
 		\input{beurteilung}
