--- a/neuformulierung.tex
+++ b/neuformulierung.tex
@@ -19,7 +19,7 @@
 
 \begin{drama}
 
-\franspeaks \direct{nimmt den Brief aus der Tasche.} Dir ist unser Korrespandent bekannt! Schau! Alles w"urde ich geben, k"o"nnte ich dir sagen, dass er ein L"ugner, ein dreckiger L"ugner, ist --- Beruhige dich! Du wirst mir nachsehen, dass ich dich den Brief nicht selbst lesen lasse -- Noch darfst du nicht alles h"oren.
+\franspeaks \direct{nimmt den Brief aus der Tasche.} Dir ist unser Korrespondent bekannt! Schau! Alles w"urde ich geben, k"o"nnte ich dir sagen, dass er ein L"ugner, ein dreckiger L"ugner, ist --- Beruhige dich! Du wirst mir nachsehen, dass ich dich den Brief nicht selbst lesen lasse -- Noch darfst du nicht alles h"oren.
 \moorspeaks Alles, alles -- mein Sohn, du bist mir eine Hilfe.
 \franspeaks \direct{liest.} \frqq Leipzig, vom 1. Mai. -- H"atte ich dir nicht versprochen dir nichts, das Schicksal deines Bruders betrefflich, zu verschweigen, mein Freund, w"are ich der "Ubersendung des Folgenden aus dem Weg gegangen. Aus unseren vorhergegangenen Korrespondenzen schlie"se ich wie sehr dich diese Nachricht quälen muss. Dich male ich mir schon aus, wie du um diesen Unw"urdigen, den Taugenichts\flqq \ --- \direct{Der alte Moor verbirgt sein Gesicht.} Schau, Vater! ich lese dir nur das schonendste vor -- \frqq den Taugenichts weinst\flqq , ja, sie haben mich ergriffen -- haben mich eingenommen -- \frqq und deinen Vater dem Tode nahe\flqq \ -- Oh Gott! Ich sehe dich diesem Zustand schon so nahe, doch hast du noch nichts erfahren.
 \moorspeaks Weiter! Weiter!
