--- a/zeitung.tex
+++ b/zeitung.tex
@@ -1,7 +1,10 @@
 \texttt{\Huge Gefahr aus dem Wald}
-\newline
-\textit{\Large Die unerwarteten Wahrheiten}
+	\newline
+\textit{\Large Die ersch"utternden Wahrheiten}
 \normalsize
+
 \begin{adjmulticols*}{3}{0pt}{0in}
-  \lettrine{W}{enn} ich dieses erblicke. \lipsum[1-2]
+ 	\lettrine{W}{ie} jeder unserer treuen Leser bereits wei"s, treibt seit l"angerer Zeit eine R"auberband in unseren Gefilden ihr Unwesen. Dabei geht sie zutiefst brutal vor und schreckt auch vor Menschenopfern nicht zur"uck.
+ 	Da der Umstand, dass "uber diese "Ubelt"ater nichts bekannt ist unser Leser nachts nicht schlafen l"asst, haben wir unseren besten Mann auf die Spur dieser Ganoven gesetzt. Die Ergebnisse sind naturgem"a"s niederschmetternd.
+ 	Die Bande hat ihren Mittelpunkt in den bo"mischen W"aldern gefunden, von dort starten sie ihre verh"agnissvollen Streifz"uge. Als ihr Hauptmann konnte \textit{Karl von Moor} ausgemacht werden. Der entstammt dem Hause Moor, dessen alternder Vorsteher mit Ach und Krach versucht sein Land zu regieren.
 \end{adjmulticols*}
