--- a/schauplaetze.tex
+++ b/schauplaetze.tex
@@ -6,7 +6,7 @@
 	\subparagraph{Franzes Zimmer, \textit{2. Akt, 1. Szene}}
 		Zentrale Franzens Schaffen
 	\subparagraph{Moors Zimmer, \textit{2. Akt, 2. Szene}}
-		Ort an dem der alte vom Tod sienes Sohnes erf"ahrt
+		Ort an dem der alte vom Tod seines Sohnes erf"ahrt
 	\subparagraph{Schlossgarten, \textit{3. Akt, 1. Szene}, \textit{4. Akt, 5. Szene}}
 		Weitere Bedr"angung Amalias und sp"ater unerkannte Begegnung mit Karl
 	\subparagraph{Umgebende Gegend, \textit{4. Akt, 1. Szene}}
