--- a/dieRäuber.tex
+++ b/dieRäuber.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, titlepage, draft]{article}
+\documentclass[a4paper, titlepage, final]{article}
 \usepackage{ngerman, dramatist, adjmulticol, lipsum, type1cm, lettrine, graphicx}
 \usepackage[pdftex,bookmarks=true]{hyperref}
 \author{Fabio Madge-Pimentel\\
