--- a/charakterisierung.tex
+++ b/charakterisierung.tex
@@ -1,2 +1,2 @@
-Karl Moor ist der "alteste Sohn des alten Moor und steht seit seiner Kindheit mit seinem Bruder Franz in Rivalität um die Gunst dessen, wobei Karl generell im Vorteil lieg. Dies ist zum einen durch seinen guten "au"seren Qualitäten, aber auch seinen Intellekt bedingt.
+Karl Moor ist der "alteste Sohn des alten Moor und steht seit seiner Kindheit mit seinem Bruder Franz in Rivalit"at um die Gunst dessen, wobei Karl generell im Vorteil lieg. Dies ist zum einen durch seinen guten "au"seren Qualitäten, aber auch seinen Intellekt bedingt.
 Zu Beginn des Dramas ist er als Student in Leipzig, bricht sein Studium jedoch, wegen der Entt"auschung "uber die Versto"sung des Vaters, zugunsten einer Karriere als R"auber ab. In dieser Profession bek"ampft er als Hauptmann einer R"aberbande die Ungerechtigkeiten im Staat, kann sich jedoch zu keinem Zeitpunkt von seiner Liebe Amalia l"osen.
