--- a/dieRäuber.tex
+++ b/dieRäuber.tex
@@ -20,6 +20,7 @@
 	\input{register}
 \newpage
 \part{Karl von Moor}
+	\setcounter {section} {0}
 	\section{Charakterisierung}
 		\input{charakterisierung}
 %	\newpage
@@ -27,14 +28,18 @@
 		\input{steckbrief}
 \newpage
 \part{Textarbeit}
+	\setcounter {section} {0}
 	\section{Schaupl"atze}
 		\input{schauplaetze}
+	\newpage
 	\section{Regiebuch}
 		\input{regiebuch}
+	\newpage
 	\section{Neuformulierung}
 		\input{neuformulierung}
 \newpage
 \part{Freiarbeit}
+	\setcounter {section} {0}
 	\section{Beurteilung}
 		\input{beurteilung}
 	\section{Alternatives Ende}
