--- a/beurteilung.tex
+++ b/beurteilung.tex
@@ -1,1 +1,1 @@
-Mit seinem Werk "`Die R"auber"' bringt Schiller es fertig ein zeitloses Werk zu schaffen, welches trotz seines nicht zeitgem"a"sen Rahmens und der ebenso zu bewertenden Sprache immernoch aktuell ist und auf unsere Zeit angewendet werden kann. Jedoch ist der literarische Anspruch der seinen Themen entgegengebracht wurde in meinen Augen bewusst zu hoch angesetzt, was dazu f"uhrt, dass,  heute wie damals, Teile der Bevo"lkerung als Publikum ausgeschlossen werden.
+Mit seinem Werk "`Die R"auber"' bringt Schiller es fertig, ein zeitloses Werk zu schaffen, welches trotz seines nicht zeitgem"a"sen Rahmens und der ebenso zu bewertenden Sprache immer noch aktuell ist und auf unsere Zeit angewendet werden kann. Jedoch ist der literarische Anspruch, der seinen Themen entgegengebracht wurde, in meinen Augen bewusst zu hoch angesetzt, was dazu f"uhrt, dass,  heute wie damals, Teile der Bev"olkerung als Publikum ausgeschlossen werden.
