--- a/ende.tex
+++ b/ende.tex
@@ -1,2 +1,2 @@
-Mein alternatives Ende setzt im \textit{5. Akt, 1. Szene} an, aber in diesem Szenario gelingt es Amalia nicht vom Schloss zu fliehen, sondern wird von einem Nachtw"achter aufgegriffen. Der Zorn "uber den Fluchtversuch ist das Z"unglein an der Waage f"ur Franz und er fasst den Entschluss zum Selbstmord. Jedoch m"ochte er Amalia nicht am Leben lassen und entscheidt sich daf"ur sie von eben erw"ahnten Nachtw"achter im Brunnen ert"anken zu lassen.
-Dadurch, dass Amalia niemals im Lager auftaucht, stirbt der alte Moor durch die and eines der R"auber. Die Geschehnisse lassen Karl letzendlich mit seiner Vergnagenheit abschlie"sen und er kann weiter als R"auber t"atig sein.
+Mein alternatives Ende setzt im \textit{5. Akt, 1. Szene} an, aber in diesem Szenario gelingt es Amalia nicht, vom Schloss zu fliehen, sondern sie wird von einem Nachtw"achter aufgegriffen. Der Zorn "uber den Fluchtversuch ist das Z"unglein an der Waage f"ur Franz und er fasst den Entschluss zum Selbstmord. Jedoch m"ochte er Amalia nicht am Leben lassen und entscheidet sich daf"ur, sie von eben erw"ahnten Nachtw"achter im Brunnen ertr"anken zu lassen.
+Dadurch, dass Amalia niemals im Lager auftaucht, stirbt der alte Moor durch die Hand eines der R"auber. Die Geschehnisse lassen Karl letzendlich mit seiner Vergangenheit abschlie"sen und er kann weiter als R"auber t"atig sein.
