--- a/steckbrief.tex
+++ b/steckbrief.tex
@@ -9,7 +9,7 @@
 \end{center}
 
 \begin{center}
-Der hier gezeigte  R"auberhauptmann \textbf{\uppercase{Karl von Moor}} wird aufgrund diverser vergehen gegen die Menschlichkeit gesucht. Dem Finder werden
+Der hier gezeigte  R"auberhauptmann \textbf{\uppercase{Karl von Moor}} wird aufgrund diverser Vergehen gegen die Menschlichkeit gesucht. Dem Finder werden
 \end{center}
 
 \begin{center}
