--- a/zeitung.tex
+++ b/zeitung.tex
@@ -4,9 +4,9 @@
 \normalsize
 
 \begin{adjmulticols*}{3}{0pt}{0in}
- 	\lettrine{W}{ie} jeder unserer treuen Leser bereits wei"s, treibt seit l"angerer Zeit eine R"auberband in unseren Gefilden ihr Unwesen. Dabei geht sie zutiefst brutal vor und schreckt auch vor Menschenopfern nicht zur"uck.
- 	Da der Umstand, dass "uber diese "Ubelt"ater nichts bekannt ist unser Leser nachts nicht schlafen l"asst, haben wir unseren besten Mann auf die Spur dieser Ganoven gesetzt. Die Ergebnisse sind naturgem"a"s niederschmetternd.
- 	Die Bande hat ihren Mittelpunkt in den bo"mischen W"aldern gefunden, von dort starten sie ihre verh"agnissvollen Streifz"uge. Als ihr Hauptmann konnte \textit{Karl von Moor} ausgemacht werden. Der entstammt dem Hause Moor, dessen alternder Vorsteher mit Ach und Krach versucht sein Land zu regieren.
- 	Aber zum Gl"uck konneten wir auch Schachstellen ausmachen, so gibt es beispielsweise Probleme auf derF"uhrungsebene, dort m"ochte sich n"amlich auch \textit{Moritz Spiegelberg} positionieren.
- 	Mehr k"onnen wir im Moment nicht zu berichten, aber "uber eins k"onnen sie verischert sein, wir verflogen diese Misset"ater f"ur sie weiter.
+ 	\lettrine{W}{ie} jeder unserer treuen Leser bereits wei"s, treibt seit l"angerer Zeit eine R"auberbande in unseren Gefilden ihr Unwesen. Dabei geht sie zutiefst brutal vor und schreckt auch vor Menschenopfern nicht zur"uck.
+ 	Da der Umstand, dass "uber diese "Ubelt"ater nichts bekannt ist unsere Leser nachts nicht schlafen l"asst, haben wir unseren besten Mann auf die Spur dieser Ganoven gesetzt. Die Ergebnisse sind naturgem"a"s niederschmetternd.
+ 	Die Bande hat ihren Mittelpunkt in den b"omischen W"aldern gefunden, von dort starten sie ihre verh"angisvollen Streifz"uge. Als ihr Hauptmann konnte \textit{Karl von Moor} ausgemacht werden. Der entstammt dem Hause Moor, dessen alternder Vorsteher mit Ach und Krach versucht sein Land zu regieren.
+ 	Aber zum Gl"uck konneten wir auch Schachstellen ausmachen, so gibt es beispielsweise Probleme auf der F"uhrungsebene, dort m"ochte sich n"amlich auch \textit{Moritz Spiegelberg} positionieren.
+ 	Mehr k"onnen wir im Moment nicht berichten, aber "uber eins k"onnen sie versichert sein, wir verflogen diese Misset"ater f"ur sie weiter.
 \end{adjmulticols*}
