--- a/schauplaetze.tex
+++ b/schauplaetze.tex
@@ -2,11 +2,11 @@
 	\subparagraph{Saal, \textit{1. Akt, 1. Szene}}
 		Ort der Briefverlesung
 	\subparagraph{Amaliens Zimmer, \textit{1. Akt, 3. Szene}}
-		Bedr"anung Amalias durch Franz
+		Bedr"angung Amalias durch Franz
 	\subparagraph{Franzes Zimmer, \textit{2. Akt, 1. Szene}}
-		Zentrale Franzens Schaffen
+		Zentrale Franzens Schaffens
 	\subparagraph{Moors Zimmer, \textit{2. Akt, 2. Szene}}
-		Ort an dem der alte vom Tod seines Sohnes erf"ahrt
+		Ort, an dem der Alte vom Tod seines Sohnes erf"ahrt
 	\subparagraph{Schlossgarten, \textit{3. Akt, 1. Szene}, \textit{4. Akt, 5. Szene}}
 		Wiederholte Bedr"angung Amalias und sp"ater unerkannte Begegnung mit Karl
 	\subparagraph{Umgebende Gegend, \textit{4. Akt, 1. Szene}}
@@ -14,11 +14,11 @@
 	\subparagraph{Galerie, \textit{4. Akt, 2. Szene}}
 		Enddeckung Karls
 	\subparagraph{Anderes Zimmer, \textit{4. Akt, 3. Szene}}
-		Offenbarung Karls gegenüber Daniel
+		Offenbarung Karls gegen"uber Daniel
 	\subparagraph{Nahe gelegener Wald. Mit Schloss, \textit{4. Akt, 5. Szene}, \textit{5. Akt, 2. Szene}}
 		Ort der Gefangenschaft des alten Moors
 \paragraph{Schenke an den Grenzen von Sachsen, \textit{1. Akt, 2. Szene}}
-Ort an dem Karl auf Spiegelberg trifft
+Ort, an dem Karl auf Spiegelberg trifft
 \paragraph{Die b"omischen W"alder, \textit{2. Akt, 3. Szene}}
 Lager und R"uckzugsort der Ra"uber
 \paragraph{Gegend an der Donau, \textit{3. Akt, 2. Szene}}
